--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,30 @@
 body{
   border: 1px solid white;
+}body{
+  border: 1px solid white;
+}body{
+  border: 1px solid white;
+}body{
+  border: 1px solid white;
+}body{
+  border: 1px solid white;
+}body{
+  border: 1px solid white;
+}
+body{
+  border: 1px solid white;
+}body{
+  border: 1px solid white;
+}body{
+  border: 1px solid white;
+}body{
+  border: 1px solid white;
+}body{
+  border: 1px solid white;
+}body{
+  border: 1px solid white;
+}body{
+  border: 1px solid white;
+}body{
+  border: 1px solid white;
 }
